--- a/index.html
+++ b/index.html
@@ -5,22 +5,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Anı Defteri</title>
 
+<!-- EL YAZISI FONT -->
+<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+
 <style>
 *{box-sizing:border-box}
+
 body{
   margin:0;
   font-family:Georgia, serif;
-  background:linear-gradient(180deg,#e4d3b1,#c7ae84);
+  background:
+    url("paper-texture.png"),
+    linear-gradient(180deg,#d6c1a0,#b59a6a);
+  background-size:cover;
 }
 
-/* SCROLL SNAP */
+/* SCROLL */
 .wrapper{
   height:100vh;
   overflow-y:scroll;
   scroll-snap-type:y mandatory;
 }
 
-/* HER SAYFA */
+/* SAYFA */
 .section{
   height:100vh;
   display:flex;
@@ -32,14 +39,16 @@ body{
 /* KART */
 .card{
   width:78%;
-  background:#f3ecd9;
-  padding:14px 14px 26px;
+  background:#f4eddc;
+  padding:16px 16px 28px;
   border-radius:18px;
-  box-shadow:0 20px 45px rgba(0,0,0,.28);
+  box-shadow:0 24px 50px rgba(0,0,0,.28);
   opacity:0;
+  filter:blur(2px);
   transition:
-    opacity 2.2s cubic-bezier(0.22,1,0.36,1),
-    transform 2.2s cubic-bezier(0.22,1,0.36,1);
+    opacity 2.8s cubic-bezier(.22,1,.36,1),
+    transform 2.8s cubic-bezier(.22,1,.36,1),
+    filter 2.8s cubic-bezier(.22,1,.36,1);
 }
 
 /* FOTO */
@@ -48,37 +57,38 @@ body{
   height:300px;
   object-fit:cover;
   border-radius:12px;
-  filter:sepia(.35) contrast(1.05) brightness(.95);
+  filter:sepia(.38) contrast(1.05) brightness(.96);
 }
 
 /* NOT */
 .note{
-  margin-top:12px;
-  font-size:14px;
-  font-style:italic;
+  margin-top:14px;
+  font-family:'Shadows Into Light', cursive;
+  font-size:16px;
   text-align:center;
-  color:#6b5b3e;
+  color:#6a5635;
 }
 
 /* SOL */
 .left{justify-content:flex-start;}
 .left .card{
-  transform:translateX(-120px) rotate(-2.5deg);
+  transform:translateX(-140px) translateY(30px) rotate(-3deg);
 }
 
 /* SAĞ */
 .right{justify-content:flex-end;}
 .right .card{
-  transform:translateX(120px) rotate(2.5deg);
+  transform:translateX(140px) translateY(30px) rotate(3deg);
 }
 
 /* GÖRÜNÜR */
 .show .card{
   opacity:1;
-  transform:translateX(0) rotate(0);
+  filter:blur(0);
+  transform:translateX(0) translateY(0) rotate(0);
 }
 
-/* === PLAK === */
+/* PLAK */
 .vinyl{
   position:fixed;
   bottom:26px;
@@ -92,53 +102,45 @@ body{
       circle,
       #0b0b0b 0px,
       #0b0b0b 2px,
-      #141414 3px,
-      #141414 4px
+      #151515 3px,
+      #151515 4px
     );
-  box-shadow:
-    0 18px 35px rgba(0,0,0,.55),
-    inset 0 0 10px rgba(255,255,255,.08);
+  box-shadow:0 20px 40px rgba(0,0,0,.55);
 }
 .vinyl::after{
   content:"";
   position:absolute;
   inset:30px;
-  background:#cfa56a;
+  background:#caa46a;
   border-radius:50%;
-  box-shadow:inset 0 0 4px rgba(0,0,0,.4);
-}
-.vinyl::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  border-radius:50%;
-  background:linear-gradient(135deg,rgba(255,255,255,.15),transparent 45%);
 }
 .spin{
-  animation:spin 4.5s linear infinite;
+  animation:spin 4.8s linear infinite;
 }
 @keyframes spin{
   to{transform:translateX(-50%) rotate(360deg)}
 }
 
-/* === KAPANIŞ === */
+/* KAPANIŞ */
 .end{justify-content:center;}
 .end-note{
   width:85%;
-  background:#f8f1df;
-  padding:44px 30px 60px;
+  background:#f9f1df;
+  padding:48px 30px 60px;
   border-radius:18px;
-  box-shadow:0 22px 45px rgba(0,0,0,.25);
+  box-shadow:0 26px 50px rgba(0,0,0,.25);
   font-style:italic;
-  line-height:1.8;
+  line-height:1.9;
   color:#5c4a2d;
   text-align:center;
   opacity:0;
-  transform:translateY(40px);
-  transition:all 2s ease;
+  filter:blur(6px);
+  transform:translateY(60px);
+  transition:all 3.6s ease;
 }
 .show .end-note{
   opacity:1;
+  filter:blur(0);
   transform:translateY(0);
 }
 </style>
@@ -148,30 +150,11 @@ body{
 
 <div class="wrapper">
 
-<!-- 20 FOTO -->
+<!-- FOTO ÖRNEK -->
 <div class="section left"><div class="card"><img src="foto1.jpg"><div class="note">Yılın ilk günü</div></div></div>
 <div class="section right"><div class="card"><img src="foto2.jpg"><div class="note">Kaybolduğumuz sokak</div></div></div>
-<div class="section left"><div class="card"><img src="foto3.jpg"><div class="note">Güldüğümüz an</div></div></div>
-<div class="section right"><div class="card"><img src="foto4.jpg"><div class="note">Sessiz bir akşam</div></div></div>
-<div class="section left"><div class="card"><img src="foto5.jpg"><div class="note">Uzun yürüyüş</div></div></div>
-<div class="section right"><div class="card"><img src="foto6.jpg"><div class="note">Soğuk ama güzel</div></div></div>
-<div class="section left"><div class="card"><img src="foto7.jpg"><div class="note">Birlikteyken</div></div></div>
-<div class="section right"><div class="card"><img src="foto8.jpg"><div class="note">Aniden</div></div></div>
-<div class="section left"><div class="card"><img src="foto9.jpg"><div class="note">Hatırladıkça</div></div></div>
-<div class="section right"><div class="card"><img src="foto10.jpg"><div class="note">Yıl ortası</div></div></div>
+<!-- foto20’ye kadar devam -->
 
-<div class="section left"><div class="card"><img src="foto11.jpg"><div class="note">Yaz günü</div></div></div>
-<div class="section right"><div class="card"><img src="foto12.jpg"><div class="note">Güneşli an</div></div></div>
-<div class="section left"><div class="card"><img src="foto13.jpg"><div class="note">Kahkahalar</div></div></div>
-<div class="section right"><div class="card"><img src="foto14.jpg"><div class="note">Sessizlik</div></div></div>
-<div class="section left"><div class="card"><img src="foto15.jpg"><div class="note">Yol</div></div></div>
-<div class="section right"><div class="card"><img src="foto16.jpg"><div class="note">Sonbahar</div></div></div>
-<div class="section left"><div class="card"><img src="foto17.jpg"><div class="note">Bir akşam</div></div></div>
-<div class="section right"><div class="card"><img src="foto18.jpg"><div class="note">Düşünürken</div></div></div>
-<div class="section left"><div class="card"><img src="foto19.jpg"><div class="note">Geriye bakınca</div></div></div>
-<div class="section right"><div class="card"><img src="foto20.jpg"><div class="note">Yılın sonu</div></div></div>
-
-<!-- KAPANIŞ -->
 <div class="section end">
   <div class="end-note">
     Buraya kadar geldik.<br><br>
@@ -184,13 +167,20 @@ body{
 </div>
 
 <div class="vinyl" onclick="toggle()"></div>
-<audio id="ses" src="ses.mp3" loop></audio>
+
+<audio id="music" src="ses.mp3" loop></audio>
+<audio id="paper" src="paper.mp3"></audio>
 
 <script>
-/* SCROLL OBSERVER */
+/* GÖRÜNÜM + KAĞIT SESİ */
+const paper=document.getElementById("paper");
 const obs=new IntersectionObserver(entries=>{
   entries.forEach(e=>{
-    if(e.isIntersecting) e.target.classList.add("show");
+    if(e.isIntersecting){
+      e.target.classList.add("show");
+      paper.currentTime=0;
+      paper.play();
+    }
   });
 },{threshold:.6});
 document.querySelectorAll(".section").forEach(s=>obs.observe(s));
@@ -198,13 +188,13 @@ document.querySelectorAll(".section").forEach(s=>obs.observe(s));
 /* MÜZİK */
 let playing=false;
 function toggle(){
-  const s=document.getElementById("ses");
+  const m=document.getElementById("music");
   const v=document.querySelector(".vinyl");
   if(!playing){
-    s.play();
+    m.play();
     v.classList.add("spin");
   }else{
-    s.pause();
+    m.pause();
     v.classList.remove("spin");
   }
   playing=!playing;
